--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -305,20 +305,20 @@ linux-aarch64:
     - target/aarch64-unknown-linux-gnu/release/parity
     name: "aarch64-unknown-linux-gnu_parity"
   allow_failure: true
-linux-alpine:
-  stage: build
-  image: ethcore/rust-alpine:latest
-  only:
-    - beta
-    - tags
-    - stable
-    - triggers
-  script:
-    - export HOST_CC=gcc
-    - export HOST_CXX=g++
-    - cargo build --release $CARGOFLAGS
-    - strip target/release/parity
-    - md5sum target/release/parity > parity.md5
+#linux-alpine:
+#  stage: build
+#  image: ethcore/rust-alpine:latest
+#  only:
+#    - beta
+#    - tags
+#    - stable
+#    - triggers
+#  script:
+#    - export HOST_CC=gcc
+#    - export HOST_CXX=g++
+#    - cargo build --release $CARGOFLAGS
+#    - strip target/release/parity
+#    - md5sum target/release/parity > parity.md5
 #    - sh scripts/deb-build.sh arm64
 #    - cp target/aarch64-unknown-linux-gnu/release/parity deb/usr/bin/parity
 #    - export VER=$(grep -m 1 version Cargo.toml | awk '{print $3}' | tr -d '"' | tr -d "\n")
@@ -332,14 +332,14 @@ linux-alpine:
 #    - aws s3api put-object --bucket $S3_BUCKET --key $CI_BUILD_REF_NAME/aarch64-unknown-linux-gnu/parity.md5 --body parity.md5
 #    - aws s3api put-object --bucket $S3_BUCKET --key $CI_BUILD_REF_NAME/aarch64-unknown-linux-gnu/"parity_"$VER"_arm64.deb" --body "parity_"$VER"_arm64.deb"
 #    - aws s3api put-object --bucket $S3_BUCKET --key $CI_BUILD_REF_NAME/aarch64-unknown-linux-gnu/"parity_"$VER"_arm64.deb.md5" --body "parity_"$VER"_arm64.deb.md5"
-  tags:
-    - rust
-    - rust-alpine
+#  tags:
+#    - rust
+#    - rust-alpine
 #  artifacts:
 #    paths:
 #    - target/aarch64-unknown-linux-gnu/release/parity
 #    name: "aarch64-unknown-linux-gnu_parity"
-  allow_failure: true
+#  allow_failure: true
 darwin:
   stage: build
   only:
@@ -405,7 +405,7 @@ windows:
     - if %CI_BUILD_REF_NAME% == "beta" set S3_BUCKET=builds-parity-published else (set S3_BUCKET=parity-builds)
     - if %CI_BUILD_REF_NAME% == "stable" set S3_BUCKET=builds-parity-published else (set S3_BUCKET=parity-builds)
     - echo %S3_BUCKET%
-    - aws s3 rm --recursive s3://$S3_BUCKET/$CI_BUILD_REF_NAME/x86_64-pc-windows-msvc
+    - aws s3 rm --recursive s3://%S3_BUCKET%/%CI_BUILD_REF_NAME%/x86_64-pc-windows-msvc
     - aws s3api put-object --bucket %S3_BUCKET% --key %CI_BUILD_REF_NAME%/x86_64-pc-windows-msvc/parity.exe --body target\release\parity.exe
     - aws s3api put-object --bucket %S3_BUCKET% --key %CI_BUILD_REF_NAME%/x86_64-pc-windows-msvc/parity.exe.md5 --body target\release\parity.exe.md5
     - aws s3api put-object --bucket %S3_BUCKET% --key %CI_BUILD_REF_NAME%/x86_64-pc-windows-msvc/parity.zip --body target\release\parity.zip
