Reuse Webpack Configs

--- a/js/package.json
+++ b/js/package.json
@@ -26,16 +26,16 @@
   ],
   "scripts": {
     "build": "npm run build:lib && npm run build:dll && npm run build:app",
-    "build:app": "webpack --progress",
-    "build:lib": "webpack --config webpack.libraries --progress",
-    "build:dll": "webpack --config webpack.vendor --progress",
+    "build:app": "webpack --config webpack/config --progress",
+    "build:lib": "webpack --config webpack/libraries --progress",
+    "build:dll": "webpack --config webpack/vendor --progress",
     "ci:build": "npm run ci:build:lib && npm run ci:build:dll && npm run ci:build:app",
-    "ci:build:app": "NODE_ENV=production webpack",
-    "ci:build:lib": "NODE_ENV=production webpack --config webpack.libraries",
-    "ci:build:dll": "NODE_ENV=production webpack --config webpack.vendor",
-    "ci:build:npm": "NODE_ENV=production webpack --config webpack.npm",
+    "ci:build:app": "NODE_ENV=production webpack --config webpack/config",
+    "ci:build:lib": "NODE_ENV=production webpack --config webpack/libraries",
+    "ci:build:dll": "NODE_ENV=production webpack --config webpack/vendor",
+    "ci:build:npm": "NODE_ENV=production webpack --config webpack/npm",
     "start": "npm install && npm run build:lib && npm run build:dll && npm run start:app",
-    "start:app": "webpack-dev-server -d --history-api-fallback --open --hot --inline --progress --colors --port 3000",
+    "start:app": "webpack-dev-server --config webpack/config -d --history-api-fallback --open --hot --inline --progress --colors --port 3000",
     "clean": "rm -rf ./build ./coverage",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
     "lint": "eslint --ignore-path .gitignore ./src/",
