--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -401,9 +401,9 @@ windows:
     - aws configure set aws_access_key_id %s3_key%
     - aws configure set aws_secret_access_key %s3_secret%
     - echo %CI_BUILD_REF_NAME%
-    - if %CI_BUILD_REF_NAME% == "master" set S3_BUCKET=builds-parity-published else (set S3_BUCKET=parity-builds)
-    - if %CI_BUILD_REF_NAME% == "beta" set S3_BUCKET=builds-parity-published else (set S3_BUCKET=parity-builds)
-    - if %CI_BUILD_REF_NAME% == "stable" set S3_BUCKET=builds-parity-published else (set S3_BUCKET=parity-builds)
+    - cmd if %CI_BUILD_REF_NAME% == "master" set S3_BUCKET=builds-parity-published else (set S3_BUCKET=parity-builds)
+    - cmd if %CI_BUILD_REF_NAME% == "beta" set S3_BUCKET=builds-parity-published else (set S3_BUCKET=parity-builds)
+    - cmd if %CI_BUILD_REF_NAME% == "stable" set S3_BUCKET=builds-parity-published else (set S3_BUCKET=parity-builds)
     - echo %S3_BUCKET%
     - aws s3 rm --recursive s3://%S3_BUCKET%/%CI_BUILD_REF_NAME%/x86_64-pc-windows-msvc
     - aws s3api put-object --bucket %S3_BUCKET% --key %CI_BUILD_REF_NAME%/x86_64-pc-windows-msvc/parity.exe --body target\release\parity.exe
