Use webpack hot/dev middlewares

--- a/js/package.json
+++ b/js/package.json
@@ -35,7 +35,7 @@
     "ci:build:dll": "NODE_ENV=production webpack --config webpack/vendor",
     "ci:build:npm": "NODE_ENV=production webpack --config webpack/npm",
     "start": "npm install && npm run build:lib && npm run build:dll && npm run start:app",
-    "start:app": "webpack-dev-server --config webpack/config -d --history-api-fallback --open --hot --inline --progress --colors --port 3000",
+    "start:app": "node webpack/dev.server",
     "clean": "rm -rf ./build ./coverage",
     "coveralls": "npm run testCoverage && coveralls < coverage/lcov.info",
     "lint": "eslint --ignore-path .gitignore ./src/",
@@ -80,6 +80,7 @@
     "eslint-plugin-promise": "~2.0.0",
     "eslint-plugin-react": "~5.1.1",
     "eslint-plugin-standard": "~2.0.0",
+    "express": "~4.14.0",
     "extract-loader": "0.0.2",
     "extract-text-webpack-plugin": "~1.0.1",
     "file-loader": "~0.8.5",
@@ -88,6 +89,7 @@
     "history": "~2.0.0",
     "html-loader": "~0.4.4",
     "html-webpack-plugin": "~2.24.1",
+    "http-proxy-middleware": "~0.17.2",
     "husky": "~0.11.9",
     "ignore-styles": "2.0.0",
     "image-webpack-loader": "~1.8.0",
@@ -115,7 +117,7 @@
     "style-loader": "~0.13.0",
     "url-loader": "~0.5.7",
     "webpack": "~1.13.2",
-    "webpack-dev-server": "~1.15.2",
+    "webpack-dev-middleware": "~1.8.4",
     "webpack-error-notification": "0.1.6",
     "webpack-hot-middleware": "~2.13.2",
     "websocket": "~1.0.23"
