--- a/js/package.json
+++ b/js/package.json
@@ -47,52 +47,52 @@
     "prepush": "npm run lint:cached"
   },
   "devDependencies": {
-    "babel-cli": "~6.10.1",
-    "babel-core": "~6.10.4",
+    "babel-cli": "~6.18.0",
+    "babel-core": "~6.18.2",
     "babel-eslint": "~7.1.0",
     "babel-loader": "~6.2.3",
     "babel-plugin-lodash": "~3.2.2",
-    "babel-plugin-transform-class-properties": "~6.11.5",
+    "babel-plugin-transform-class-properties": "~6.19.0",
     "babel-plugin-transform-decorators-legacy": "~1.3.4",
     "babel-plugin-transform-react-remove-prop-types": "~0.2.9",
-    "babel-plugin-transform-runtime": "~6.9.0",
-    "babel-polyfill": "~6.13.0",
-    "babel-preset-es2015": "~6.9.0",
-    "babel-preset-es2015-rollup": "~1.1.1",
-    "babel-preset-es2016": "~6.11.3",
-    "babel-preset-es2017": "~6.14.0",
-    "babel-preset-react": "~6.5.0",
-    "babel-preset-stage-0": "~6.5.0",
-    "babel-register": "6.9.0",
-    "babel-runtime": "~6.9.2",
+    "babel-plugin-transform-runtime": "~6.15.0",
+    "babel-polyfill": "~6.16.0",
+    "babel-preset-es2015": "~6.18.0",
+    "babel-preset-es2015-rollup": "~1.2.0",
+    "babel-preset-es2016": "~6.16.0",
+    "babel-preset-es2017": "~6.16.0",
+    "babel-preset-react": "~6.16.0",
+    "babel-preset-stage-0": "~6.16.0",
+    "babel-register": "6.18.0",
+    "babel-runtime": "~6.18.0",
     "chai": "~3.5.0",
     "chai-enzyme": "0.4.2",
     "cheerio": "0.20.0",
     "copy-webpack-plugin": "~4.0.0",
     "core-js": "~2.4.1",
     "coveralls": "~2.11.11",
-    "css-loader": "~0.23.1",
+    "css-loader": "~0.26.0",
     "enzyme": "2.3.0",
-    "eslint": "~3.1.0",
-    "eslint-config-semistandard": "~6.0.2",
-    "eslint-config-standard": "~5.3.5",
-    "eslint-config-standard-react": "~3.0.0",
-    "eslint-plugin-promise": "~2.0.0",
-    "eslint-plugin-react": "~5.1.1",
+    "eslint": "~3.10.2",
+    "eslint-config-semistandard": "~7.0.0",
+    "eslint-config-standard": "~6.2.1",
+    "eslint-config-standard-react": "~4.2.0",
+    "eslint-plugin-promise": "~3.4.0",
+    "eslint-plugin-react": "~6.7.1",
     "eslint-plugin-standard": "~2.0.0",
     "express": "~4.14.0",
-    "extract-loader": "0.0.2",
-    "extract-text-webpack-plugin": "~1.0.1",
-    "file-loader": "~0.8.5",
+    "extract-loader": "0.1.0",
+    "extract-text-webpack-plugin": "~2.0.0-beta.4",
+    "file-loader": "~0.9.0",
     "fs-extra": "~0.30.0",
-    "happypack": "~2.2.1",
+    "happypack": "~3.0.0",
     "history": "~2.0.0",
     "html-loader": "~0.4.4",
     "html-webpack-plugin": "~2.24.1",
     "http-proxy-middleware": "~0.17.2",
     "husky": "~0.11.9",
     "ignore-styles": "2.0.0",
-    "image-webpack-loader": "~1.8.0",
+    "image-webpack-loader": "~3.0.0",
     "istanbul": "~1.0.0-alpha.2",
     "jsdom": "9.2.1",
     "json-loader": "~0.5.4",
@@ -101,13 +101,12 @@
     "mock-socket": "~3.0.1",
     "nock": "~8.0.0",
     "postcss-import": "~8.1.2",
-    "postcss-loader": "~0.8.1",
+    "postcss-loader": "~1.1.1",
     "postcss-nested": "~1.0.0",
     "postcss-simple-vars": "~3.0.0",
     "raw-loader": "~0.5.1",
     "react-addons-perf": "~15.3.2",
     "react-addons-test-utils": "~15.3.2",
-    "react-copy-to-clipboard": "~4.2.3",
     "react-dom": "~15.3.2",
     "react-hot-loader": "~1.3.0",
     "rucksack-css": "~0.8.6",
@@ -116,7 +115,7 @@
     "sinon-chai": "~2.8.0",
     "style-loader": "~0.13.0",
     "url-loader": "~0.5.7",
-    "webpack": "~1.13.2",
+    "webpack": "~2.1.0-beta.27",
     "webpack-dev-middleware": "~1.8.4",
     "webpack-error-notification": "0.1.6",
     "webpack-hot-middleware": "~2.13.2",
@@ -151,6 +150,7 @@
     "react-ace": "~4.0.0",
     "react-addons-css-transition-group": "~15.3.2",
     "react-chartjs-2": "~1.5.0",
+    "react-copy-to-clipboard": "~4.2.3",
     "react-dom": "~15.3.2",
     "react-dropzone": "~3.7.3",
     "react-redux": "~4.4.5",
