WIP - Webpack 2 building

--- a/js/package.json
+++ b/js/package.json
@@ -100,10 +100,11 @@
     "mock-local-storage": "1.0.2",
     "mock-socket": "~3.0.1",
     "nock": "~8.0.0",
-    "postcss-import": "~8.1.2",
+    "postcss-import": "8.1.0",
     "postcss-loader": "~1.1.1",
     "postcss-nested": "~1.0.0",
     "postcss-simple-vars": "~3.0.0",
+    "progress": "^1.1.8",
     "raw-loader": "~0.5.1",
     "react-addons-perf": "~15.3.2",
     "react-addons-test-utils": "~15.3.2",
