--- a/js/.babelrc
+++ b/js/.babelrc
@@ -1,5 +1,9 @@
 {
-  "presets": ["es2017", "es2016", "es2015", "stage-0", "react"],
+  "presets": [
+    "es2017", "es2016",
+    [ "es2015", { "modules": false } ],
+    "stage-0", "react"
+  ],
   "plugins": [
     "transform-runtime",
     "transform-decorators-legacy",
