Use Yahoo react-intl (as opposed to react-i18nify)

--- a/js/package.json
+++ b/js/package.json
@@ -150,7 +150,7 @@
     "react-chartjs-2": "^1.5.0",
     "react-dom": "~15.3.2",
     "react-dropzone": "^3.7.3",
-    "react-i18nify": "^1.6.3",
+    "react-intl": "^2.1.5",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
     "react-router-redux": "^4.0.5",
