Pin package versions for beta

--- a/js/package.json
+++ b/js/package.json
@@ -131,14 +131,14 @@
     "mobx-react-devtools": "^4.2.9",
     "moment": "^2.14.1",
     "qs": "^6.3.0",
-    "react": "^15.2.1",
-    "react-addons-css-transition-group": "^15.2.1",
+    "react": "~15.3.2",
+    "react-addons-css-transition-group": "~15.3.2",
     "react-chartjs-2": "^1.5.0",
-    "react-dom": "^15.2.1",
+    "react-dom": "~15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
     "react-router-redux": "^4.0.5",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-tap-event-plugin": "~1.0.0",
     "react-tooltip": "^2.0.3",
     "recharts": "^0.15.2",
     "redux": "^3.5.2",
