Working HOT RELOAD !!

--- a/js/.babelrc
+++ b/js/.babelrc
@@ -13,6 +13,9 @@
   "env": {
     "production": {
       "plugins": ["transform-react-remove-prop-types"]
+    },
+    "development": {
+      "plugins": ["react-hot-loader/babel"]
     }
   }
 }
