--- a/js/package.json
+++ b/js/package.json
@@ -109,7 +109,7 @@
     "react-addons-perf": "~15.3.2",
     "react-addons-test-utils": "~15.3.2",
     "react-dom": "~15.3.2",
-    "react-hot-loader": "~1.3.0",
+    "react-hot-loader": "~3.0.0-beta.6",
     "rucksack-css": "~0.8.6",
     "sinon": "~1.17.4",
     "sinon-as-promised": "~4.0.2",
