--- a/dapps/src/api/types.rs.in
+++ b/dapps/src/api/types.rs.in
@@ -17,6 +17,7 @@
 use endpoint::EndpointInfo;
 
 #[derive(Debug, PartialEq, Clone, Serialize, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub struct App {
 	pub id: String,
 	pub name: String,
@@ -54,6 +55,7 @@ impl Into<EndpointInfo> for App {
 }
 
 #[derive(Debug, PartialEq, Serialize, Deserialize)]
+#[serde(deny_unknown_fields)]
 pub struct ApiError {
 	pub code: String,
 	pub title: String,
