--- a/js/package.json
+++ b/js/package.json
@@ -72,6 +72,7 @@
     "core-js": "~2.4.1",
     "coveralls": "~2.11.11",
     "css-loader": "~0.26.0",
+    "ejs-loader": "~0.3.0",
     "enzyme": "2.3.0",
     "eslint": "~3.10.2",
     "eslint-config-semistandard": "~7.0.0",
