--- a/js/package.json
+++ b/js/package.json
@@ -134,6 +134,7 @@
     "ethereumjs-tx": "~1.1.2",
     "eventemitter3": "~2.0.2",
     "file-saver": "~1.3.3",
+    "flat": "~2.0.1",
     "format-json": "~1.0.3",
     "format-number": "~2.0.1",
     "geopattern": "~1.2.3",
