Extract default messages via babel

--- a/js/.babelrc
+++ b/js/.babelrc
@@ -15,7 +15,10 @@
       "plugins": ["transform-react-remove-prop-types"]
     },
     "development": {
-      "plugins": ["react-hot-loader/babel"]
+      "plugins": [
+        "react-hot-loader/babel",
+        ["react-intl", { "messagesDir": "./.build/i18n/" }]
+      ]
     }
   }
 }
