--- a/js/package.json
+++ b/js/package.json
@@ -52,6 +52,7 @@
     "babel-eslint": "~7.1.0",
     "babel-loader": "~6.2.3",
     "babel-plugin-lodash": "~3.2.2",
+    "babel-plugin-react-intl": "~2.2.0",
     "babel-plugin-transform-class-properties": "~6.19.0",
     "babel-plugin-transform-decorators-legacy": "~1.3.4",
     "babel-plugin-transform-react-remove-prop-types": "~0.2.9",
