--- a/parity/cli/config.toml
+++ b/parity/cli/config.toml
@@ -57,7 +57,7 @@ cache_size_queue = 100
 cache_size_state = 25
 db_compaction = "ssd"
 fat_db = "off"
-scale_verifiers = false,
+scale_verifiers = false
 
 [snapshots]
 disable_periodic = true
