--- a/.travis.yml
+++ b/.travis.yml
@@ -71,8 +71,7 @@ install:
 script:
   - if [ "$RUN_TESTS" = "true" ]; then
       ./js/scripts/lint.sh &&
-      ./js/scripts/test.sh &&
-      travis_wait ./test.sh $TEST_OPTIONS;
+      travis_wait 40 ./test.sh $TEST_OPTIONS;
     fi
   - if [ "$RUN_COVERAGE" = "true" ]; then ./scripts/cov.sh "$KCOV_CMD"; fi
 
