--- a/js/.babelrc
+++ b/js/.babelrc
@@ -16,6 +16,15 @@
     },
     "development": {
       "plugins": ["react-hot-loader/babel"]
+    },
+    "test": {
+      "plugins": [
+        [
+          "babel-plugin-webpack-alias", {
+            "config": "webpack/test.js"
+          }
+        ]
+      ]
     }
   }
 }
