--- a/js/package.json
+++ b/js/package.json
@@ -67,6 +67,7 @@
     "babel-register": "6.18.0",
     "babel-runtime": "6.18.0",
     "chai": "3.5.0",
+    "chai-as-promised": "6.0.0",
     "chai-enzyme": "0.6.1",
     "copy-webpack-plugin": "4.0.1",
     "core-js": "2.4.1",
