--- a/ethcore/light/Cargo.toml
+++ b/ethcore/light/Cargo.toml
@@ -12,7 +12,7 @@ build = "build.rs"
 
 [dependencies]
 log = "0.3"
-ethcore = { path = "..", features = ["light"] }
+ethcore = { path = ".."}
 ethcore-util = { path = "../../util" }
 ethcore-network = { path = "../../util/network" }
 ethcore-io = { path = "../../util/io" }
@@ -22,4 +22,4 @@ time = "0.1"
 
 [features]
 default = []
-ipc = ["ethcore/ipc", "ethcore-ipc", "ethcore-ipc-codegen"]
+ipc = ["ethcore-ipc", "ethcore-ipc-codegen"]
