--- a/sync/Cargo.toml
+++ b/sync/Cargo.toml
@@ -15,7 +15,7 @@ ethcore-ipc-codegen = { path = "../ipc/codegen" }
 ethcore-util = { path = "../util" }
 ethcore-network = { path = "../util/network" }
 ethcore-io = { path = "../util/io" }
-ethcore-light = { path = "../ethcore/light", optional = true }
+ethcore-light = { path = "../ethcore/light"}
 ethcore = { path = "../ethcore" }
 rlp = { path = "../util/rlp" }
 clippy = { version = "0.0.103", optional = true}
@@ -30,7 +30,6 @@ ethcore-ipc-nano = { path = "../ipc/nano" }
 parking_lot = "0.3"
 
 [features]
-default = ["ipc"]
+default = []
 dev = ["clippy", "ethcore/dev", "ethcore-util/dev"]
-light = ["ethcore-light"]
-ipc = []
+ipc = ["ethcore-light/ipc"]
