light: integrate with sync + serve_light CLI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ rlp = { path = "util/rlp" }
 ethcore-stratum = { path = "stratum" }
 ethcore-dapps = { path = "dapps", optional = true }
 clippy = { version = "0.0.103", optional = true}
+ethcore-light = { path = "ethcore/light" }
 
 [target.'cfg(windows)'.dependencies]
 winapi = "0.2"
