--- a/js/.babelrc
+++ b/js/.babelrc
@@ -7,6 +7,7 @@
     "transform-runtime",
     "transform-decorators-legacy",
     "transform-class-properties",
+    "transform-object-rest-spread",
     "lodash"
   ],
   "retainLines": true,
