--- a/js/npm/etherscan/package.json
+++ b/js/npm/etherscan/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@parity/parity.js",
-  "description": "The Parity Promise-base API & ABI library for interfacing with Ethereum over RPC",
+  "name": "@parity/Etherscan",
+  "description": "The Parity Promise-based library for interfacing with Etherscan over HTTP",
   "version": "0.0.0",
   "main": "library.js",
   "author": "Parity Team <admin@parity.io>",
@@ -26,8 +26,6 @@
   "devDependencies": {
   },
   "dependencies": {
-    "bignumber.js": "^2.3.0",
-    "js-sha3": "^0.5.2",
-    "node-fetch": "^1.6.3"
+    "node-fetch": "~1.6.3"
   }
 }
