--- a/js/package.json
+++ b/js/package.json
@@ -59,6 +59,7 @@
     "babel-plugin-transform-runtime": "6.15.0",
     "babel-plugin-webpack-alias": "2.1.2",
     "babel-polyfill": "6.20.0",
+    "babel-preset-env": "1.0.2",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-es2016": "6.16.0",
     "babel-preset-es2017": "6.16.0",
