--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ ethcore-stratum = { path = "stratum" }
 ethcore-dapps = { path = "dapps", optional = true }
 clippy = { version = "0.0.103", optional = true}
 ethcore-light = { path = "ethcore/light" }
+ethabi = "0.2.2"
 
 [target.'cfg(windows)'.dependencies]
 winapi = "0.2"
