--- a/js/npm/etherscan/package.json
+++ b/js/npm/etherscan/package.json
@@ -24,6 +24,8 @@
   "scripts": {
   },
   "devDependencies": {
+    "chai": "3.5.0",
+    "mocha": "3.2.0"
   },
   "dependencies": {
     "node-fetch": "~1.6.3"
