Extended publishing of libraries to npm (#3786)
* Extended publishing of libraries to npm

* Update source links

* Add some tests before publishing NPM library

* Fix Shapeshift tests

--- a/js/npm/parity/package.json
+++ b/js/npm/parity/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@parity/parity.js",
-  "description": "The Parity Promise-base API & ABI library for interfacing with Ethereum over RPC",
+  "description": "The Parity Promise-based API & ABI library for interfacing with Ethereum over RPC",
   "version": "0.0.0",
   "main": "library.js",
   "author": "Parity Team <admin@parity.io>",
@@ -26,8 +26,8 @@
   "devDependencies": {
   },
   "dependencies": {
-    "bignumber.js": "^2.3.0",
-    "js-sha3": "^0.5.2",
-    "node-fetch": "^1.6.3"
+    "bignumber.js": "~2.3.0",
+    "js-sha3": "~0.5.2",
+    "node-fetch": "~1.6.3"
   }
 }
