--- a/js/package.json
+++ b/js/package.json
@@ -43,7 +43,7 @@
     "test": "NODE_ENV=test mocha 'src/**/*.spec.js'",
     "test:coverage": "NODE_ENV=test istanbul cover _mocha -- 'src/**/*.spec.js'",
     "test:e2e": "NODE_ENV=test mocha 'src/**/*.e2e.js'",
-    "test:npm": "(cd .npmjs && npm i) && node test/npmLibrary && (rm -rf .npmjs/node_modules)",
+    "test:npm": "(cd .npmjs && npm i) && node test/npmParity && (rm -rf .npmjs/node_modules)",
     "prepush": "npm run lint:cached"
   },
   "devDependencies": {
