authors & homepage => Parity

--- a/util/fetch/Cargo.toml
+++ b/util/fetch/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 description = "HTTP/HTTPS fetching library"
-homepage = "http://ethcore.io"
+homepage = "http://parity.io"
 license = "GPL-3.0"
 name = "fetch"
 version = "0.1.0"
-authors = ["Ethcore <admin@ethcore.io>"]
+authors = ["Parity Technologies <admin@parity.io>"]
 
 [dependencies]
 log = "0.3"
