--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ description = "Ethcore client."
 name = "parity"
 version = "1.5.0"
 license = "GPL-3.0"
-authors = ["Ethcore <admin@ethcore.io>"]
+authors = ["Parity Technologies <admin@parity.io>"]
 build = "build.rs"
 
 [build-dependencies]
