--- a/dapps/Cargo.toml
+++ b/dapps/Cargo.toml
@@ -3,7 +3,7 @@ description = "Parity Dapps crate"
 name = "ethcore-dapps"
 version = "1.5.0"
 license = "GPL-3.0"
-authors = ["Ethcore <admin@ethcore.io"]
+authors = ["Parity Technologies <admin@parity.io>"]
 build = "build.rs"
 
 [lib]
