--- a/ethcore/hash-fetch/Cargo.toml
+++ b/ethcore/hash-fetch/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 description = "Fetching hash-addressed content."
-homepage = "https://ethcore.io"
+homepage = "http://parity.io"
 license = "GPL-3.0"
 name = "ethcore-hash-fetch"
 version = "1.5.0"
-authors = ["Ethcore <admin@ethcore.io>"]
+authors = ["Parity Technologies <admin@parity.io>"]
 
 [dependencies]
 log = "0.3"
