--- a/ethcore/light/Cargo.toml
+++ b/ethcore/light/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 description = "Parity LES primitives"
-homepage = "https://ethcore.io"
+homepage = "http://parity.io"
 license = "GPL-3.0"
 name = "ethcore-light"
 version = "1.5.0"
-authors = ["Ethcore <admin@ethcore.io>"]
+authors = ["Parity Technologies <admin@parity.io>"]
 build = "build.rs"
 
 [build-dependencies]
