--- a/updater/src/types/mod.rs.in
+++ b/updater/src/types/mod.rs.in
@@ -14,25 +14,4 @@
 // You should have received a copy of the GNU General Public License
 // along with Parity.  If not, see <http://www.gnu.org/licenses/>.
 
-//! Updater for Parity executables
-
-#[macro_use] extern crate log;
-extern crate ethcore_util as util;
-extern crate ipc_common_types;
-extern crate parity_hash_fetch as hash_fetch;
-extern crate ethcore;
-extern crate ethabi;
-extern crate ethcore_ipc as ipc;
-
-mod updater;
-mod operations;
-mod types;
-
-mod service {
-	#![allow(dead_code, unused_assignments, unused_variables, missing_docs)] // codegen issues
-	include!(concat!(env!("OUT_DIR"), "/service.rs"));
-}
-
-pub use service::{Service};
-pub use types::all::{ReleaseInfo, OperationsInfo, CapState, VersionInfo, ReleaseTrack};
-pub use updater::{Updater, UpdateFilter, UpdatePolicy};
+pub mod all;
