--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -34,6 +34,7 @@ serde_macros = { version = "0.8.0", optional = true }
 clippy = { version = "0.0.103", optional = true}
 ethcore-ipc = { path = "../ipc/rpc" }
 time = "0.1"
+semver = "0.5"
 
 [build-dependencies]
 serde_codegen = { version = "0.8.0", optional = true }
